fixed about spacing

--- a/src/About.css
+++ b/src/About.css
@@ -11,8 +11,9 @@
 
   .about-container {
     display: flex;
-    flex-direction:column;
+    flex-direction:row;
     justify-content: center;
+    align-items: flex-end;
     padding-top: 100px;
     align-content: flex-start;
     color: var(--type)
@@ -21,8 +22,9 @@
   
    .profile-pic{
     position: absolute;
-    width: 400px;
+    width: 500px;
     height: 400px;
+    margin-left: 250px;
     border-radius:50px;
     object-fit: cover;
     /* padding: 10px */
@@ -33,9 +35,9 @@
    .aboutText {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-     margin: 4em 15em;
+    /* justify-content: center; */
+    /* align-items: center; */
+     /* margin: 4em 75em; */
    }
   
    .name {
